Se sube pagina completa

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,119 @@
 ---
-import Layout from '../layouts/Layout.astro';
-
+import Layout from "../layouts/Layout.astro";
+import CardHero from "../components/cardHero.astro";
+import Testimonials from "../components/Testimonials.astro";
 ---
 
-<Layout title="Ramirez Window Cleaning and Pressure Washing.">
-	<div class=" h-screen">h1</div>
+<Layout title="Home">
+  <!-- HERO SECTION -->
+  <section
+    class="relative bg-[url('/img/hero-image.png')] bg-cover md:h-[630px] h-[500px] bg-bottom"
+  >
+    <div
+      class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
+    >
+      <div class="mx-2 place-self-center lg:col-span-7 text-white mt-7">
+        <h1
+          class="mb-4 text-3xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl animate-fade-right animate-duration-[2000ms]"
+        >
+          Ramirez Window Cleaning & Pressure Washing
+        </h1>
+        <p class="max-w-2xl mb-6 font-light lg:mb-8 md:text-lg lg:text-xl animate-fade-right animate-duration-[2000ms]">
+          Professional window cleaning and pressure washing services to keep
+          your space pristine. Excellence and efficiency in every job.
+        </p>
+        <a
+          href="/Contact"
+          class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-zinc-800 focus:ring-4 focus:ring-gray-100 animate-fade-right animate-duration-[2000ms]"
+        >
+          Contact Us
+        </a>
+      </div>
+    </div>
+  </section>
+  <!-- CARD SECTION -->
+  <section class="bg-zinc-100">
+    <div
+      class="relative -mt-20 md:-mt-40 flex justify-between items-center max-w-7xl mx-auto px-6"
+    >
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 animate-fade-up animate-duration-[2000ms] mb-28">
+        <CardHero
+          title="Windows Cleaning"
+          description="Professional window cleaning services, ensuring impeccable clarity and shine."
+          imageUrl="/img/services/window5.jpeg"
+          UrlRef="/services/window"
+        />
+        <CardHero
+          title="Sealing"
+          description="Superior sealing solutions to protect and preserve your surfaces."
+          imageUrl="/img/services/sealing2.jpeg"
+          UrlRef="/services/sealing"
+        />
+        <CardHero
+          title="Roof Cleaning"
+          description="Expert roof cleaning services to maintain and enhance your property’s appearance."
+          imageUrl="/img/services/roof3.jpeg"
+          UrlRef="/services/roof"
+        />
+        <CardHero
+          title="Interior and Exterior Painting"
+          description="Painting services for elegant and durable interior and exterior finishes"
+          imageUrl="/img/services/pinture3.jpeg"
+          UrlRef="/services/painting"
+        />
+      </div>
+    </div>
+  </section>
+  <section class="bg-white">
+    <div class="max-w-7xl mx-auto ">
+      <div class="flex md:flex-row flex-wrap h-auto p-10">
+        <div class="w-full md:w-2/5 text-center text-gray-700">
+          <div class="flex-1 animate-fade-left p-2 md:p-0">
+              <img
+                src="/img/imgAbout.jpeg"
+                alt="About Us"
+                class="w-full h-[400px] object-cover object-bottom rounded-lg"
+              />
+            </div>
+        </div>
+        <div class="w-full md:w-3/5 text-gray-200">
+          <div class="flex-1 md:pr-32 md:pl-16 px-2">
+              <h2 class="text-4xl font-bold mb-4 text-[#0C2461] mt-4 md:mt-0">About Us</h2>
+              <hr class="w-48 h-1 my-4 bg-[#0C2461] border-0 rounded md:mb-5" />
+              <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right">
+              Ramírez Window Cleaning and Pressure Washing is a family business led by Didier Ramírez and Udiel Ramírez since 2017, providing quality services and exceeding the expectations of each of our clients.
+              </p> 
+              <a
+              href="/About"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-[#0C2461] rounded-lg hover:bg-blue-900 focus:ring-4 focus:outline-none"
+            >
+              Read more
+              <svg
+                class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                aria-hidden="true"
+                fill="none"
+                viewBox="0 0 14 10"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+              </svg>
+            </a>
+            </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <section class="bg-zinc-100">
+    <div class="max-w-7xl mx-auto ">
+      <Testimonials />
+    </div>
+  
+  </section>
 </Layout>
 
-<style>
-
-</style>
+<style></style>
