--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,31 +4,20 @@
 
 <nav class="bg-[#0C2461] text-white">
   <div
-    class="max-w-7xl flex flex-wrap items-center justify-between mx-auto p-4"
+    class="max-w-7xl flex flex-wrap items-center justify-between mx-auto p-4 md:h-28"
   >
-    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img
-        src="https://flowbite.com/docs/images/logo.svg"
-        class="h-8"
-        alt="Flowbite Logo"
-      />
-      <span class="self-center text-2xl font-semibold whitespace-nowrap"
-        >Flowbite</span
-      >
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <img src="/img/logo.png" class=" w-32" alt="Ramirez Window Logo" />
+      
     </a>
     <button
       data-collapse-toggle="navbar-dropdown"
       type="button"
-      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm  rounded-lg md:hidden focus:outline-none focus:ring-2 focus:ring-gray-200"
+      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden focus:outline-none focus:ring-2 focus:ring-gray-200"
       aria-controls="navbar-dropdown"
       aria-expanded="false"
     >
-      <svg
-        class="w-5 h-5"
-        aria-hidden="true"
-        fill="none"
-        viewBox="0 0 17 14"
-      >
+      <svg class="w-5 h-5" aria-hidden="true" fill="none" viewBox="0 0 17 14">
         <path
           stroke="currentColor"
           stroke-linecap="round"
@@ -37,14 +26,14 @@
           d="M1 1h15M1 7h15M1 13h15"></path>
       </svg>
     </button>
-    <div class="hidden w-full md:block md:w-auto z-10 " id="navbar-dropdown">
+    <div class="hidden w-full md:block md:w-auto z-10" id="navbar-dropdown">
       <ul
-        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-white md:bg-transparent md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0"
+        class="flex flex-col font-bold p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-white md:bg-transparent md:space-x-14 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0"
       >
         <li>
           <a
-            href="#"
-            class="font-bold block py-2 px-3 bg-[#0C2461] text-white rounded md:bg-transparent md:p-0"
+            href="/"
+            class="font-bold block py-2 px-3  md:text-white text-gray-900  hover:text-[#F6B93B] rounded md:bg-transparent md:p-0"
             aria-current="page">Home</a
           >
         </li>
@@ -52,7 +41,7 @@
           <button
             id="dropdownNavbarLink"
             data-dropdown-toggle="dropdownNavbar"
-            class="font-bold flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 md:w-auto md:text-white"
+            class="font-bold flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:text-[#F6B93B] hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 md:w-auto md:text-white"
             >Services<svg
               class="w-2.5 h-2.5 ms-2.5"
               aria-hidden="true"
@@ -78,49 +67,53 @@
             >
               <li>
                 <a
-                  href="#"
-                  class="block px-4 text-[#0C2461]  py-2 hover:bg-gray-100 "
+                  href="/services/window"
+                  class="block px-4 text-[#0C2461] py-2 hover:bg-gray-100"
                   >Windows Cleaning</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block px-4 text-[#0C2461]  py-2 hover:bg-gray-100 "
-                  >Sealer</a
+                  href="/services/sealing"
+                  class="block px-4 text-[#0C2461] py-2 hover:bg-gray-100"
+                  >Sealing</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block px-4 text-[#0C2461]  py-2 hover:bg-gray-100 "
+                  href="/services/roof"
+                  class="block px-4 text-[#0C2461] py-2 hover:bg-gray-100"
                   >Roof Cleaning</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block px-4 text-[#0C2461]  py-2 hover:bg-gray-100 "
+                  href="/services/painting"
+                  class="block px-4 text-[#0C2461] py-2 hover:bg-gray-100"
                   >Interior and Exterior Painting</a
                 >
               </li>
             </ul>
-            <div class="py-1">
-
-            </div>
           </div>
         </li>
         <li>
           <a
-            href="#"
-            class="block py-2 px-3 rounded text-[#0C2461] md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0"
-            >Pricing</a
+            href="/Gallery"
+            class="block py-2 px-3 rounded text-[#0C2461] md:text-white md:hover:text-[#F6B93B] hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0"
+            >Gallery</a
           >
         </li>
         <li>
           <a
-            href="#"
-            class="block py-2 px-3 rounded text-[#0C2461] md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0"
+            href="/About"
+            class="block py-2 px-3 rounded text-[#0C2461] md:text-white md:hover:text-[#F6B93B] hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0"
+            >About Us</a
+          >
+        </li>
+        <li>
+          <a
+            href="/Contact"
+            class="block py-2 px-3 rounded text-[#0C2461] md:text-white md:hover:text-[#F6B93B] hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 md:mr-2"
             >Contact</a
           >
         </li>
