--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -43,7 +43,10 @@ const { title } = Astro.props;
 	@font-face {
 		font-family: "PublicSans";
 		src: url("/fonts/PublicSans-Bold.ttf") format("truetype");
-
+	}
+	@font-face {
+		font-family: "PublicSans";
+		src: url("/fonts/PublicSans-Regular.ttf") format("truetype");
 	}
 </style>
 
