Se optmizaron las imagenes y el reparo bug de linea en title pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
         <div class="md:flex md:justify-between">
             <div class="mb-6 md:mb-0">
                 <a href="/" class="flex items-center ml-16 md:ml-0">
-                    <img src="/img/logo.png" class="h-32 me-3" alt="Ramirez Window Logo" />
+                    <img src="/img/logo.webp" class="h-32 me-3" alt="Ramirez Window Logo" />
                 </a>
             </div>
             <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
