--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -12,27 +12,27 @@ import TitlePage from "../components/titlePage.astro";
       <div class="w-full md:w-2/5 text-center text-gray-700">
         <div class="flex-1 animate-fade-left p-2 md:p-0">
             <img
-              src="/img/imgAbout.jpeg"
+              src="/img/imgAbout.webp"
               alt="About Us"
               class="w-full h-full rounded-lg"
             />
           </div>
       </div>
       <div class="w-full md:w-3/5 text-gray-200">
-        <div class="flex-1 md:pr-32 md:pl-16 px-2">
+        <div class="flex-1 md:pr-32 md:pl-16 px-2 ">
             <h2 class="text-4xl font-bold mb-4 text-[#0C2461] mt-4 md:mt-0">About Us</h2>
             <hr class="w-48 h-1 my-4 bg-[#0C2461] border-0 rounded md:mb-5" />
-            <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right">
+            <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right text-pretty">
             Ramírez Window Cleaning and Pressure Washing is a family business led by Didier Ramírez and Udiel Ramírez since 2017, providing quality services and exceeding the expectations of each of our clients.
             </p> 
-            <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right">
+            <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right text-pretty">
               We pride ourselves on our ability to tailor our services to meet
               each client's unique needs, ensuring personalized and efficient
               solutions. Our primary goal is to provide top-tier quality services
               at competitive prices, always keeping your comfort and satisfaction
               in mind.
             </p>
-            <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right">
+            <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right text-pretty">
               At Ramirez Window Cleaning & Pressure Washing, we focus not only on
               technical excellence but also on creating an exceptional customer
               experience. We firmly believe that outstanding service goes beyond
@@ -40,7 +40,7 @@ import TitlePage from "../components/titlePage.astro";
               clients, based on trust, respect, and an understanding of their
               needs.
             </p>
-            <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right">
+            <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right text-pretty">
               Every project is an opportunity for us to demonstrate our commitment
               to excellence and our passion for exceeding your expectations. Let
               our team show you the difference that choosing Ramirez Window
