--- a/src/pages/Gallery.astro
+++ b/src/pages/Gallery.astro
@@ -4,29 +4,29 @@ import TitlePage from "../components/titlePage.astro";
 
 // Importa cualquier cosa que necesites aquí. En este caso, no necesitas importar React.
 const pintures = [
-  "/img/services/pinture1.jpeg",
-  "/img/services/pinture2.jpeg",
-  "/img/services/pinture3.jpeg",
-  "/img/services/pinture4.jpeg",
-  "/img/services/pinture5.jpeg",
-  "/img/services/pinture6.jpeg",
-  "/img/services/pinture7.jpeg",
-  "/img/services/pinture8.jpeg",
+  "/img/services/pinture1.webp",
+  "/img/services/pinture2.webp",
+  "/img/services/pinture3.webp",
+  "/img/services/pinture4.webp",
+  "/img/services/pinture5.webp",
+  "/img/services/pinture6.webp",
+  "/img/services/pinture7.webp",
+  "/img/services/pinture8.webp",
 ];
 const roofs = [
-  "/img/services/roof1.jpeg",
-  "/img/services/roof2.jpeg",
-  "/img/services/roof3.jpeg",
-  "/img/services/roof4.jpeg",
+  "/img/services/roof1.webp",
+  "/img/services/roof2.webp",
+  "/img/services/roof3.webp",
+  "/img/services/roof4.webp",
 ];
 
 const windows = [
-  "/img/services/window1.jpeg",
-  "/img/services/window2.jpeg",
-  "/img/services/window3.jpeg",
-  "/img/services/window4.jpeg",
-  "/img/services/window5.jpeg",
-  "/img/services/window6.jpeg",
+  "/img/services/window1.webp",
+  "/img/services/window2.webp",
+  "/img/services/window3.webp",
+  "/img/services/window4.webp",
+  "/img/services/window5.webp",
+  "/img/services/window6.webp",
 ];
 ---
 
@@ -40,44 +40,21 @@ const windows = [
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing.jpeg"
+              src="/img/services/sealing.webp"
               alt=""
             />
           </div>
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing2.jpeg"
+              src="/img/services/sealing2.webp"
               alt=""
             />
           </div>
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing14.jpeg"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="grid gap-4">
-          <div>
-            <img
-              class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing4.jpeg"
-              alt=""
-            />
-          </div>
-          <div>
-            <img
-              class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing5.jpeg"
-              alt=""
-            />
-          </div>
-          <div>
-            <img
-              class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing6.jpeg"
+              src="/img/services/sealing14.webp"
               alt=""
             />
           </div>
@@ -86,21 +63,21 @@ const windows = [
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing7.jpeg"
+              src="/img/services/sealing4.webp"
               alt=""
             />
           </div>
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing8.jpeg"
+              src="/img/services/sealing5.webp"
               alt=""
             />
           </div>
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing9.jpeg"
+              src="/img/services/sealing6.webp"
               alt=""
             />
           </div>
@@ -109,21 +86,44 @@ const windows = [
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing10.jpeg"
+              src="/img/services/sealing7.webp"
               alt=""
             />
           </div>
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing13.jpeg"
+              src="/img/services/sealing8.webp"
               alt=""
             />
           </div>
           <div>
             <img
               class="h-auto max-w-full rounded-lg"
-              src="/img/services/sealing12.jpeg"
+              src="/img/services/sealing9.webp"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="grid gap-4">
+          <div>
+            <img
+              class="h-auto max-w-full rounded-lg"
+              src="/img/services/sealing10.webp"
+              alt=""
+            />
+          </div>
+          <div>
+            <img
+              class="h-auto max-w-full rounded-lg"
+              src="/img/services/sealing13.webp"
+              alt=""
+            />
+          </div>
+          <div>
+            <img
+              class="h-auto max-w-full rounded-lg"
+              src="/img/services/sealing12.webp"
               alt=""
             />
           </div>
