--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Testimonials from "../components/Testimonials.astro";
 <Layout title="Home">
   <!-- HERO SECTION -->
   <section
-    class="relative bg-[url('/img/hero-image.png')] bg-cover md:h-[630px] h-[500px] bg-bottom"
+    class="relative bg-[url('/img/hero-image.webp')] bg-cover md:h-[630px] h-[500px] bg-bottom"
   >
     <div
       class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
@@ -18,9 +18,8 @@ import Testimonials from "../components/Testimonials.astro";
         >
           Ramirez Window Cleaning & Pressure Washing
         </h1>
-        <p class="max-w-2xl mb-6 font-light lg:mb-8 md:text-lg lg:text-xl animate-fade-right animate-duration-[2000ms]">
-          Professional window cleaning and pressure washing services to keep
-          your space pristine. Excellence and efficiency in every job.
+        <p class="max-w-2xl mb-6 font-light lg:mb-8 md:text-lg lg:text-xl animate-fade-right animate-duration-[2000ms] text-pretty">
+          Ramírez Window Cleaning is a family-owned business in Florida, specializing in window cleaning and pressure washing for residential and commercial properties. We provide services in the areas of Boca Raton, Coral Springs, Pompano Beach, Broward, Palm Beach, Boynton Beach, Fort Lauderdale, and Weston.
         </p>
         <a
           href="/Contact"
@@ -34,31 +33,31 @@ import Testimonials from "../components/Testimonials.astro";
   <!-- CARD SECTION -->
   <section class="bg-zinc-100">
     <div
-      class="relative -mt-20 md:-mt-40 flex justify-between items-center max-w-7xl mx-auto px-6"
+      class="relative -mt-10 md:-mt-40 flex justify-between items-center max-w-7xl mx-auto px-6"
     >
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 animate-fade-up animate-duration-[2000ms] mb-28">
         <CardHero
           title="Windows Cleaning"
           description="Professional window cleaning services, ensuring impeccable clarity and shine."
-          imageUrl="/img/services/window5.jpeg"
+          imageUrl="/img/services/window5.webp"
           UrlRef="/services/window"
         />
         <CardHero
           title="Sealing"
           description="Superior sealing solutions to protect and preserve your surfaces."
-          imageUrl="/img/services/sealing2.jpeg"
+          imageUrl="/img/services/sealing2.webp"
           UrlRef="/services/sealing"
         />
         <CardHero
           title="Roof Cleaning"
           description="Expert roof cleaning services to maintain and enhance your property’s appearance."
-          imageUrl="/img/services/roof3.jpeg"
+          imageUrl="/img/services/roof3.webp"
           UrlRef="/services/roof"
         />
         <CardHero
           title="Interior and Exterior Painting"
           description="Painting services for elegant and durable interior and exterior finishes"
-          imageUrl="/img/services/pinture3.jpeg"
+          imageUrl="/img/services/pinture3.webp"
           UrlRef="/services/painting"
         />
       </div>
@@ -70,7 +69,7 @@ import Testimonials from "../components/Testimonials.astro";
         <div class="w-full md:w-2/5 text-center text-gray-700">
           <div class="flex-1 animate-fade-left p-2 md:p-0">
               <img
-                src="/img/imgAbout.jpeg"
+                src="/img/imgAbout.webp"
                 alt="About Us"
                 class="w-full h-[400px] object-cover object-bottom rounded-lg"
               />
@@ -80,7 +79,7 @@ import Testimonials from "../components/Testimonials.astro";
           <div class="flex-1 md:pr-32 md:pl-16 px-2">
               <h2 class="text-4xl font-bold mb-4 text-[#0C2461] mt-4 md:mt-0">About Us</h2>
               <hr class="w-48 h-1 my-4 bg-[#0C2461] border-0 rounded md:mb-5" />
-              <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right">
+              <p class="text-gray-900 mb-4 tracking-wider leading-8 animate-fade-right text-pretty">
               Ramírez Window Cleaning and Pressure Washing is a family business led by Didier Ramírez and Udiel Ramírez since 2017, providing quality services and exceeding the expectations of each of our clients.
               </p> 
               <a
