--- a/src/pages/services/window.astro
+++ b/src/pages/services/window.astro
@@ -8,7 +8,7 @@ import TitlePage from "../../components/titlePage.astro";
   <TitlePage title="Window Cleaning" />
   <div class="max-w-7xl mx-auto">
     <ServicePage
-      urlimage="/img/services/sealing3.jpeg"
+      urlimage="/img/services/sealing3.webp"
       description="Experience unparalleled clarity and brilliance in your home or office with our professional window cleaning services. At Ramirez Window Cleaning, we understand that clean windows are more than just about the view – they're about making a great impression and enjoying your environment to its fullest. Our team of skilled window cleaning experts is equipped with the latest tools and techniques to ensure streak-free results. We meticulously remove dirt, grime, and residues, leaving your windows sparkling and clear. Whether it's a residential home or a commercial building, our attention to detail and commitment to excellence remain unwavering. Safety is our top priority, especially when working on high-rise buildings. Our professionals are fully trained and adhere to the strictest safety standards to ensure a thorough yet safe cleaning process. We pride ourselves on our environmentally friendly approach. Our cleaning solutions are biodegradable and eco-friendly, ensuring the safety of your family, employees, and the planet. Choose Ramirez Window Cleaning for a clear difference – because pristine windows reflect the quality and care you put into your space."
     />
   </div>
