--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@
     class="max-w-7xl flex flex-wrap items-center justify-between mx-auto p-4 md:h-28"
   >
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="/img/logo.png" class=" w-32" alt="Ramirez Window Logo" />
+      <img src="/img/logo.webp" class=" w-32" alt="Ramirez Window Logo" />
       
     </a>
     <button
