--- a/src/components/titlePage.astro
+++ b/src/components/titlePage.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <!-- Contenedor principal con fondo oscuro y texto centrado -->
-<div class="bg-[#0C2461] text-white text-center relative pt-10">
+<div class="bg-[#0C2461] text-white text-center relative pt-10" style="mask-image: linear-gradient(to bottom, white 90%, transparent); -webkit-mask-image: linear-gradient(to bottom, white 90%, transparent);">
   <!-- Título centrado con Tailwind CSS -->
   <h1 class="text-4xl md:text-6xl font-bold mb-10 animate-jump">{title}</h1>
 
