Cambios  los titulos

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Ramírez Window Cleaning is a family-owned business in Florida specializing in window cleaning and pressure washing for residential and commercial properties. We provide services in Boca Raton, Coral Springs, Pompano Beach, Broward, Palm Beach, Boynton Beach, Fort Lauderdale, and Weston." />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
