--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import TitlePage from "../components/titlePage.astro";
 ---
 
-<Layout title="About Us">
+<Layout title="About Us | Ramírez Window Cleaning | Expert Window Cleaning & Pressure Washing in Florida">
   <TitlePage title="About Us" />
 
   <div class="flex flex-row max-w-7xl mx-auto md:p-0 p-5">
