--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import TitlePage from "../components/titlePage.astro";
 ---
-<Layout title="Contact">
+<Layout title="Contact | Ramírez Window Cleaning | Expert Window Cleaning & Pressure Washing in Florida">
     <TitlePage title="Contact" />
     <div class="max-w-7xl mx-auto p-4">
       <form
