--- a/src/pages/Gallery.astro
+++ b/src/pages/Gallery.astro
@@ -30,7 +30,7 @@ const windows = [
 ];
 ---
 
-<Layout title="Gallery">
+<Layout title="Gallery | Ramírez Window Cleaning | Expert Window Cleaning & Pressure Washing in Florida">
   <TitlePage title="Gallery" />
   <div class="max-w-7xl mx-auto text-center p-5 animate-fade duration-[4000ms]">
     <div class="mb-24">
