--- a/src/pages/PrivacyPolicy.astro
+++ b/src/pages/PrivacyPolicy.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import TitlePage from "../components/titlePage.astro"
 ---
 
-<Layout title="Privacy Policy">
+<Layout title="Privacy Policy | Ramírez Window Cleaning | Expert Window Cleaning & Pressure Washing in Florida">
     <TitlePage title="Privacy Policy"/>
   <div class="flex justify-center items-center min-h-screen md:p-0 p-4">
     <div class="max-w-[700px] mx-auto px-4">
