--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import CardHero from "../components/cardHero.astro";
 import Testimonials from "../components/Testimonials.astro";
 ---
 
-<Layout title="Home">
+<Layout title="Ramírez Window Cleaning | Expert Window Cleaning & Pressure Washing in Florida">
   <!-- HERO SECTION -->
   <section
     class="relative bg-[url('/img/hero-image.webp')] bg-cover md:h-[630px] h-[500px] bg-bottom"
@@ -19,7 +19,7 @@ import Testimonials from "../components/Testimonials.astro";
           Ramirez Window Cleaning & Pressure Washing
         </h1>
         <p class="max-w-2xl mb-6 font-light lg:mb-8 md:text-lg lg:text-xl animate-fade-right animate-duration-[2000ms] text-pretty">
-          Ramírez Window Cleaning is a family-owned business in Florida, specializing in window cleaning and pressure washing for residential and commercial properties. We provide services in the areas of Boca Raton, Coral Springs, Pompano Beach, Broward, Palm Beach, Boynton Beach, Fort Lauderdale, and Weston.
+          Ramírez Window Cleaning is a family-owned business in Florida, specializing in window cleaning and pressure washing for residential and commercial properties. We provide services in the areas of <strong class="font-extrabold">Boca Raton, Coral Springs, Pompano Beach, Broward, Palm Beach, Boynton Beach, Fort Lauderdale, and Weston.</strong>
         </p>
         <a
           href="/Contact"
